Update scenarioAnalysis ReadModel
